# trampo-memo

./: .env.example  .gitignore  ARCHITECTURE.md  IMPLEMENTATION_DECISIONS.md  LICENSE  README.md  RELEASE_NOTES.md  alembic.ini  pyproject.toml
docs/: ARCHITECTURE.md  DEVELOPMENT_ROADMAP.md  IMPLEMENTATION_DECISIONS.md  PRODUCT_REQUIREMENTS.md
migrations/: env.py
migrations/versions/: 202607070001_create_sources.py  202607070002_create_source_contents.py  202607070003_create_chunks.py  202607070004_create_memories.py  202607070005_create_evidence.py  202607070006_create_answers.py  202607080001_use_pgvector_for_memory.py
src/trampomemo/: __init__.py  config.py  database.py  main.py
src/trampomemo/answers/: __init__.py  answer_repository.py  answer_service.py  llm_provider.py  models.py  prompt_builder.py  repository.py  routes.py  schemas.py  service.py
src/trampomemo/chunks/: chunker.py  models.py  repository.py  routes.py  schemas.py  service.py
src/trampomemo/core/: config.py  database.py  models.py  openai_http.py  provider_errors.py
src/trampomemo/evidence/: __init__.py  evidence_repository.py  evidence_service.py  (+6 more)
tests/: conftest.py
tests/answers/: test_answer_api.py  test_llm_provider_factory.py
tests/chunks/: test_chunk_api.py
tests/evidence/: test_evidence_api.py
tests/memory/: test_embedding_provider_factory.py  test_memory_api.py  test_memory_repository.py
tests/source_content/: test_source_content_api.py
tests/sources/: test_chunk_api.py  test_evidence_api.py  test_memory_api.py  test_source_api.py  test_source_content_api.py
(+30 files in other folders)
